<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    tools:context="com.ramm.ui.ResultActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clasification_title"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:layout_gravity="center"
        android:paddingBottom="16dp" />

    <ImageView
        android:id="@+id/ivResult"
        android:layout_width="370dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_place_holder" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/hasil"
        android:textAppearance="?attr/textAppearanceBody1" />

    <!-- Form Deskripsi -->
    <EditText
        android:id="@+id/etDeskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/deskripsi"
        android:layout_marginBottom="16dp"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:background="@color/gray1"
        android:padding="8dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/upload"
        android:backgroundTint="@color/old_green"
        android:drawableStart="@drawable/baseline_photo_camera_24"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

</LinearLayout>
