<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:text="@string/fitur_judul"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/klasifikasi_jenis_sampah_button"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:backgroundTint="@color/old_green"
                android:gravity="start|center_vertical"
                android:padding="16dp"
                android:text="@string/klasification" />

            <Button
                android:id="@+id/edukasi_mengenal_sampah_button"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/old_red"
                android:gravity="start|center_vertical"
                android:padding="16dp"
                android:text="@string/education" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
