<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/welcome_bar"
        android:layout_width="420dp"
        android:layout_height="538dp"
        android:background="@drawable/bg_welcome"
        android:elevation="5dp"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-5dp"
        tools:layout_editor_absoluteY="-24dp">

        <ImageView
            android:id="@+id/igView"
            android:layout_width="330dp"
            android:layout_height="240dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/v2" />

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/welcome"
            android:textColor="@color/green_purba"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="50dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="42dp"
            android:text="@string/desc_login"
            android:textColor="@color/green_purba"
            android:textSize="16sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        android:layout_width="360dp"
        android:layout_height="69dp"
        android:background="@drawable/button_background"
        android:text="@string/login_button"
        android:textSize="20sp"
        app:backgroundTint="@color/green_purba"
        app:icon="@drawable/ic_google"
        app:iconGravity="textStart"
        app:iconSize="24dp"
        app:layout_constraintBottom_toTopOf="@id/skipTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_bar" />

    <TextView
        android:id="@+id/skipTextView"
        android:layout_width="204dp"
        android:layout_height="42dp"
        android:layout_marginBottom="76dp"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:drawableEndCompat="@drawable/baseline_keyboard_double_arrow_right_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
