<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.ramm.ui.EdukasiActivity">

    <!-- Other views such as nav bar here -->

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nav_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Organic Waste Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_organic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/image_organic"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/organic" />

                    <TextView
                        android:id="@+id/title_organic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/organic"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp" />

                    <TextView
                        android:id="@+id/description_organic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/organic_desk"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:visibility="gone" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp">

                        <TextView
                            android:id="@+id/text_organic_more"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/selengkapnya"
                            android:clickable="true"
                            android:focusable="true" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/baseline_arrow_forward_24"
                            android:layout_marginStart="4dp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_anorganic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/image_anorganic"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/anorganic" />

                    <TextView
                        android:id="@+id/title_anorganic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/anorganic"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp" />

                    <TextView
                        android:id="@+id/description_anorganic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/anorganic_desk"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:visibility="gone" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp">

                        <TextView
                            android:id="@+id/text_anorganic_more"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/selengkapnya"
                            android:clickable="true"
                            android:focusable="true" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/baseline_arrow_forward_24"
                            android:layout_marginStart="4dp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Recycle Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_recycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/image_recycle"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/recycle" />

                    <TextView
                        android:id="@+id/title_recycle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recyclee"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp" />

                    <TextView
                        android:id="@+id/description_recycle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recyclee_desk"
                        android:maxLines="2"
                        android:ellipsize="end"
                        android:visibility="gone" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="horizontal"
                        android:layout_marginTop="8dp">

                        <TextView
                            android:id="@+id/text_recycle_more"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/selengkapnya"
                            android:clickable="true"
                            android:focusable="true" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/baseline_arrow_forward_24"
                            android:layout_marginStart="4dp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <!-- Navigation bar -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_navbar"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_home"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_home_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Home"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_fitur"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/menu_bar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Features"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_user"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_person_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Account"
                android:textSize="12sp" />
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>
